...
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/article_subheading" />

            <ImageButton
                android:id="@+id/favorite_button"
                android:layout_width="@dimen/cards_button_width"
                android:layout_height="@dimen/cards_button_height"
                android:layout_marginRight="@dimen/md_keylines"
                app:srcCompat="@drawable/ic_favorite"
                android:layout_below="@+id/card_text"
                style="?android:attr/borderlessButtonStyle"
...
